HelloUltraviolet/Fixtures/RejectedSource/Polymorphism/RefinementInlineSelfConstraint/Expected.uv
//! Expected diagnostic metadata for the RefinementInlineSelfConstraint rejected-source specimen.

expectedDiagnostic("E-TYP-1956", "diag.14.RefinementTypes")
